# obsession-vala

./: .pre-commit-config.yaml  README.md  meson.build
.github/workflows/: ci.yml
po/: POTFILES  fr.po  obsession.pot  translations.sh
src/: ObSessionCli.vala  ObSessionWindow.vala  PowerManager.vala  interfaces.vala  meson.build
src/Providers/: ConsoleKit.vala  Fallback.vala  Systemd.vala  UPower.vala
vapi/: config.vapi
